objects/Lead.object
<CustomObject>
    <fields>
        <fullName>AccountNameFirstChar__c</fullName>
        <formula>IF(
BEGINS(upper(Company), "THE "),
Upper(RIGHT(LEFT(Company,5),1)),
Upper(LEFT(Company,1))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name First Char</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Match to Existing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AutoConvert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AutoConvert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingCountryandStateCode__c</fullName>
        <formula>(BLANKVALUE(TEXT(CountryCode),'') + IF( ISPICKVAL(StateCode , ''), '', '-') +BLANKVALUE(TEXT(StateCode),''))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BillingCountryandStateCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country_Code__c</fullName>
        <formula>BLANKVALUE( NULLVALUE(TEXT(CountryCode),'NULL'),'NULL')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State_Code__c</fullName>
        <formula>BLANKVALUE( NULLVALUE(TEXT(StateCode),'NULL'),'NULL')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing State Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booth_Application_Date__c</fullName>
        <label>Booth Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Booth_Image__c</fullName>
        <label>Booth Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Booth_Requests__c</fullName>
        <label>Booth Location &amp; Special Requests</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>LeadToEvent__r.Show__r.Brand__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Match to Existing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DBA2__c</fullName>
        <label>Exhibit As / Directory Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_ID__c</fullName>
        <externalId>true</externalId>
        <label>DM_ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bad data</fullName>
                </value>
                <value>
                    <fullName>Bad Experience with Emerald</fullName>
                </value>
                <value>
                    <fullName>Business Conflict</fullName>
                </value>
                <value>
                    <fullName>Company Out of Business</fullName>
                </value>
                <value>
                    <fullName>Content not as good as in the past</fullName>
                </value>
                <value>
                    <fullName>Content not relevant</fullName>
                </value>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>COVID- Health Concerns</fullName>
                </value>
                <value>
                    <fullName>COVID- No Budget</fullName>
                </value>
                <value>
                    <fullName>COVID- Travel Restrictions</fullName>
                </value>
                <value>
                    <fullName>Customer prefers another Emerald Show</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Exhibit at Other Show(s) Only</fullName>
                </value>
                <value>
                    <fullName>Exhibitors / Suppliers not relevant</fullName>
                </value>
                <value>
                    <fullName>Hung Up</fullName>
                </value>
                <value>
                    <fullName>No authority</fullName>
                </value>
                <value>
                    <fullName>No budget</fullName>
                </value>
                <value>
                    <fullName>No interest</fullName>
                </value>
                <value>
                    <fullName>No Longer with Company</fullName>
                </value>
                <value>
                    <fullName>Not a fit</fullName>
                </value>
                <value>
                    <fullName>Not enough Exhibitors / Suppliers</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Personal Issues</fullName>
                </value>
                <value>
                    <fullName>Prefers another Show (Indicate which show)</fullName>
                </value>
                <value>
                    <fullName>Previously attended - not beneficial</fullName>
                </value>
                <value>
                    <fullName>Repetitive Content</fullName>
                </value>
                <value>
                    <fullName>Scheduling Conflict - Other Show</fullName>
                </value>
                <value>
                    <fullName>Scheduling Conflict - Personal / Religious</fullName>
                </value>
                <value>
                    <fullName>Severe Weather, Geo-Political, Unrest, etc.</fullName>
                </value>
                <value>
                    <fullName>Timing Issue (Does not meet buying cycle)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EE_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Campaign</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.Event__c</field>
                <operation>equals</operation>
                <valueField>$Source.Event__c</valueField>
            </filterItems>
            <filterItems>
                <field>Campaign.Product__c</field>
                <operation>equals</operation>
                <valueField>$Source.Product__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EE_Record_Type__c</fullName>
        <formula>IF( TEXT(Product__c)= $CustomMetadata.Product__mdt.VIP_Registration.MasterLabel, $CustomMetadata.EE_Record_Type__mdt.Attendee.DeveloperName,  
IF( TEXT(Product__c)=  $CustomMetadata.Product__mdt.Conference_Registration.MasterLabel, $CustomMetadata.EE_Record_Type__mdt.Attendee.DeveloperName,  
IF(TEXT(Product__c)=$CustomMetadata.Product__mdt.Speaker.MasterLabel, $CustomMetadata.EE_Record_Type__mdt.Attendee.DeveloperName, $CustomMetadata.EE_Record_Type__mdt.Exhibitor.DeveloperName
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EE Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventCodeLastChars__c</fullName>
        <formula>IF( 
CONTAINS(pi_ee_Event_Code1__c, "SB"), 
RIGHT(pi_ee_Event_Code1__c,2),'')</formula>
        <label>EventCodeLastChars</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Booth_Last_Date__c</fullName>
        <formula>LeadToEvent__r.Booth_Last_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Booth Last Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Non_Booth_Last_Date__c</fullName>
        <formula>LeadToEvent__r.Non_Booth_Last_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Non-Booth Last Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Required field for Lead Conversion</inlineHelpText>
        <label>Targeted Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Leads (Event)</relationshipLabel>
        <relationshipName>Lead_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Forecast_Amount__c</fullName>
        <label>Forecast Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_NSF__c</fullName>
        <label>Forecast NSF</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>IQ_Source_Id__c</fullName>
        <label>IQ Source Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ignore_Contact_Duplicate_Error_F__c</fullName>
        <formula>Ignore_Duplicate_Error__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ignore Contact Duplicate Error Formula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ignore_Duplicate_Error__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Ignore Duplicate Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastLeadStatusChanged_Date__c</fullName>
        <label>LastLeadStatusChanged Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeadToEvent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Old_Status__c</fullName>
        <label>Lead Old Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status_Duration__c</fullName>
        <formula>ROUND(
MOD(
(now()-LastModifiedDate)*1440,60),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Status Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <formula>LeadToEvent__r.Show__r.Market__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Account_ID__c</fullName>
        <formula>Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Match Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matched_Contact_ID__c</fullName>
        <formula>Contact__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Matched Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Disposition__c</fullName>
        <label>Other Disposition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Email__c</fullName>
        <label>Other Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Other_Phone__c</fullName>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_Office__c</fullName>
        <label>Phone(Office)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Product_Image_1__c</fullName>
        <label>Product Image 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Product_Image_2__c</fullName>
        <label>Product Image 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Product_Image_3__c</fullName>
        <label>Product Image 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <inlineHelpText>Required field for Lead Conversion</inlineHelpText>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Booth</fullName>
                </value>
                <value>
                    <fullName>Sponsorship</fullName>
                </value>
                <value>
                    <fullName>List rental</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>VIP Registration</fullName>
                </value>
                <value>
                    <fullName>Conference Registration</fullName>
                </value>
                <value>
                    <fullName>Speaker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <inlineHelpText>Use this field if State/Province is not available for this particular country.</inlineHelpText>
        <label>Province/Region 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ref__c</fullName>
        <description>Whoid Reference of the Lead (00Q) or Contact (003)</description>
        <label>WhoID Ref</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advertising contact</fullName>
                </value>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>Billing Contact</fullName>
                </value>
                <value>
                    <fullName>Contract Contact</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Decorator</fullName>
                </value>
                <value>
                    <fullName>Directory contact</fullName>
                </value>
                <value>
                    <fullName>Distributor Representative</fullName>
                </value>
                <value>
                    <fullName>Exhibitor kit recipient</fullName>
                </value>
                <value>
                    <fullName>Only contact</fullName>
                </value>
                <value>
                    <fullName>Onsite contact</fullName>
                </value>
                <value>
                    <fullName>Sales Contact</fullName>
                </value>
                <value>
                    <fullName>Sponsorship contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rule_Set__c</fullName>
        <formula>BLANKVALUE(SubExpo__r.SubShow__r.Rule_Set__c,Event__r.Show__r.Rule_Set__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rule Set</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <formula>LeadToEvent__r.SegmentTextFormula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show__c</fullName>
        <formula>LeadToEvent__r.Show__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SkipAddressValidation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>SkipAddressValidation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubExpo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Targeted SubExpo</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Event__c</field>
                <operation>equals</operation>
                <valueField>SubExpo__c.Event__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SubExpo__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_Rule_ID__c</fullName>
        <description>Territory Rule ID Applied</description>
        <label>Territory Rule ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Email__c</fullName>
        <label>Work Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ee_misc_questions__c</fullName>
        <description>Questions and answers are combined into a single field.  Separated by new line</description>
        <label>Misc. Questions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi_ee_Campaign_Short_Desc__c</fullName>
        <label>Campaign Short Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_ee_CombinedCustomFields__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this field is checked, we will combine Pardot Custom Field 1 and and 2 into Booth_Requests__c</description>
        <label>CombinedCustomFields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi_ee_CompanyDescription__c</fullName>
        <label>Pardot Company Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_ee_Create_SF_Task__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Pardot Create SF Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi_ee_CriticalSucessFactor__c</fullName>
        <label>Pardot objective for exhibiting</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Value1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pi_ee_Event_Code1__c</fullName>
        <formula>IF (pi_ee_Event_Code__c &lt;&gt; '', pi_ee_Event_Code__c, 
LEFT( 
IF (pi_ee_Non_US_Company__c = FALSE, pi_ee_Event_Code_Product__c, 
IF( CONTAINS (pi_ee_Event_Code_Product__c,'-VV') = TRUE, SUBSTITUTE(pi_ee_Event_Code_Product__c,'-VV','-SD'), 
IF( CONTAINS (pi_ee_Event_Code_Product__c,'-GT') = TRUE, SUBSTITUTE(pi_ee_Event_Code_Product__c,'-GT','-SD'), 
IF( CONTAINS (pi_ee_Event_Code_Product__c,'-SB') = TRUE, SUBSTITUTE(pi_ee_Event_Code_Product__c,'-SB','-SD'), 
IF( CONTAINS (pi_ee_Event_Code_Product__c,'-J') = TRUE, SUBSTITUTE(pi_ee_Event_Code_Product__c,'-J','-SD'),pi_ee_Event_Code_Product__c) 
) 
) 
) 
) 

, IF( AND(pi_ee_Non_US_Company__c = TRUE,CONTAINS (pi_ee_Event_Code_Product__c,'-J')) ,FIND("|", pi_ee_Event_Code_Product__c),FIND("|", pi_ee_Event_Code_Product__c)- 1) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Event Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_ee_Event_Code_Product__c</fullName>
        <label>Event Code - Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_ee_Event_Code__c</fullName>
        <label>Pardot Event Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_ee_Exhibit_at_other_show__c</fullName>
        <label>Exhibit at other show</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_ee_FormName__c</fullName>
        <label>Pardot Form Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_ee_InquiryReason__c</fullName>
        <label>Reason for your inquiry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_ee_Intent_To_Buy__c</fullName>
        <description>Capture Intent to Buy from Pardot</description>
        <label>Intent to Buy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_ee_Interested_Shows__c</fullName>
        <label>Interested Shows</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Value1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pi_ee_Interested_SubExpos__c</fullName>
        <label>Interested Sub Expos</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Artisan Resource</fullName>
                </value>
                <value>
                    <fullName>Distinctive Living</fullName>
                </value>
                <value>
                    <fullName>HANDMADE: Handmade® Designer Maker</fullName>
                </value>
                <value>
                    <fullName>HANDMADE: Handmade® Global Design</fullName>
                </value>
                <value>
                    <fullName>HOME: Accent on Design®</fullName>
                </value>
                <value>
                    <fullName>HOME: Home Furnishings + Textiles</fullName>
                </value>
                <value>
                    <fullName>HOME: Tabletop + Gourmet Housewares</fullName>
                </value>
                <value>
                    <fullName>LIFESTYLE: Baby + Child</fullName>
                </value>
                <value>
                    <fullName>LIFESTYLE: Gift</fullName>
                </value>
                <value>
                    <fullName>LIFESTYLE: Personal Accessories</fullName>
                </value>
                <value>
                    <fullName>LIFESTYLE: Personal Care + Wellness</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pi_ee_Job_Function__c</fullName>
        <description>Capture Job Function from Pardot</description>
        <label>Job Function</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_ee_MainContactIsContractContact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MainContactIsContractContact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi_ee_Non_US_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non US Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi_ee_Pardot_Industry__c</fullName>
        <label>Pardot Industry</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_ee_PrimaryProduct__c</fullName>
        <formula>Right( pi_ee_Event_Code_Product__c , 
len(pi_ee_Event_Code_Product__c ) - FIND("|", pi_ee_Event_Code_Product__c ))</formula>
        <label>Pardot Primary Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_ee_ProductCategories_1__c</fullName>
        <label>Pardot Product Categories</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pi_ee_ProductCategories__c</fullName>
        <description>Capture Merchant Type from Pardot</description>
        <label>Product Categories</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi_ee_ShowLandingPage__c</fullName>
        <label>Pardot Show Landing Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_ee_ShowWebsite__c</fullName>
        <label>Pardot Show Website</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_ee_SubExpoName__c</fullName>
        <label>SubExpo Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_ee_SubShowName__c</fullName>
        <label>Pardot Sub Show Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_ee_TradeshowRole__c</fullName>
        <label>Tradeshow Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_ee_budget_decision_timing__c</fullName>
        <label>Budget Decision Timing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_ee_custom_question1__c</fullName>
        <label>Pardot Custom Question 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_ee_custom_question2__c</fullName>
        <label>Pardot Custom Question 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi_ee_custom_question3__c</fullName>
        <description>Custom question that accepts multiple values.</description>
        <label>Pardot Custom Question 3</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>_blank</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pi_ee_trade_shows_I_exhibit_at__c</fullName>
        <label>Pardot Trade Shows I exhibit at</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>should_Ignore_Assignment_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If check, opportunity owner won't be set by auto-assignment rule.</description>
        <label>Should Ignore Assignment Rule?</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ASD_Pardot_Open_Leads_By_AE</fullName>
        <columns>pi_ee_Event_Code1__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Other_Phone__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>pi__url__c</field>
            <operation>greaterThan</operation>
            <value>blank</value>
        </filters>
        <filters>
            <field>Event__c</field>
            <operation>contains</operation>
            <value>2020 ASD Market</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified,Unqualified,Duplicate</value>
        </filters>
        <label>ASD Pardot Active Leads - By AE</label>
    </listViews>
    <listViews>
        <fullName>Active_Attendee_Leads</fullName>
        <columns>Event__c</columns>
        <columns>pi_ee_Campaign_Short_Desc__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Phone_Office__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Unqualified</value>
        </filters>
        <filters>
            <field>EE_Record_Type__c</field>
            <operation>equals</operation>
            <value>Attendee</value>
        </filters>
        <label>Active Attendee Leads</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Leads</fullName>
        <columns>Event__c</columns>
        <columns>pi_ee_Campaign_Short_Desc__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Phone_Office__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Unqualified</value>
        </filters>
        <label>All Active Leads</label>
    </listViews>
    <listViews>
        <fullName>BDNY_2020_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event__c</field>
            <operation>contains</operation>
            <value>2020 Boutique Design New York</value>
        </filters>
        <label>BDNY 2020 Leads</label>
    </listViews>
    <listViews>
        <fullName>Fastener_2020_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event__c</field>
            <operation>contains</operation>
            <value>2020 International Fastener Expo</value>
        </filters>
        <label>Fastener 2020 Leads</label>
        <sharedTo>
            <role>ASD_Account_Executives</role>
            <role>All_Access</role>
            <role>NIFMSE_Account_Executive</role>
            <role>NIFMSE_Sales_Management</role>
            <role>NIFMSE_Show_Management</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HD_2020_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event__c</field>
            <operation>contains</operation>
            <value>2020 HD Expo</value>
        </filters>
        <label>HD 2020 Leads</label>
    </listViews>
    <listViews>
        <fullName>KBIS_2021_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event__c</field>
            <operation>contains</operation>
            <value>2021 KBIS</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>KBIS 2021 Leads</label>
        <sharedTo>
            <role>HD_Marketing_Coordinators</role>
            <role>KBIS_Account_Executives</role>
            <role>KBIS_Marketing_Coordinators</role>
            <role>KBIS_Marketing_Management</role>
            <role>KBIS_Sales_Management</role>
            <role>KBIS_Show_Management</role>
        </sharedTo>
    </listViews>
</CustomObject>